[project]
name = "promptlens"
version = "0.1.0"
description = "OpenAI-compatible proxy that captures prompt request/response logs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.26",
  "pydantic>=2.6",
  "typer>=0.12",
  "uvicorn>=0.23",
]

[project.scripts]
plens = "promptlens.cli:main"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlens"]
